<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.quizmaster.Quizmaster">

    <!-- Introduction layout -->
    <ImageView
        android:contentDescription="@string/image_discr"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/introduction_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/intro"
        android:textSize="20sp" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/start"
        android:textColor="@color/accent"
        android:onClick="startQuiz"
        />

    <!-- Quizlayout -->
    <ScrollView
        android:id="@+id/quiz_visibility"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_weight="2.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Question 1 Radiogroup -->
            <LinearLayout
                android:id="@+id/complete_q1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/question1"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/help1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/help"
                    android:textStyle="bold"
                    android:onClick="help"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/primary_text"/>

                <RadioGroup
                    android:id="@+id/a1_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/answer1a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1a" />

                    <RadioButton
                        android:id="@+id/answer1b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1b" />

                    <RadioButton
                        android:id="@+id/answer1c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1c" />

                    <RadioButton
                        android:id="@+id/answer1d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer1d" />

                </RadioGroup>

            </LinearLayout>

            <!-- Question 2 Multiplechoice-->
            <LinearLayout
                android:id="@+id/complete_q2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/question2"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/help2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/help"
                    android:textStyle="bold"
                    android:onClick="help"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/primary_text"/>

                <CheckBox
                    android:id="@+id/answer2a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2a" />

                <CheckBox
                    android:id="@+id/answer2b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2b" />

                <CheckBox
                    android:id="@+id/answer2c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2c" />

                <CheckBox
                    android:id="@+id/answer2d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/answer2d" />

            </LinearLayout>

            <!-- Question 3  Text-->
            <LinearLayout
                android:id="@+id/complete_q3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/question3"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/help3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/help"
                    android:textStyle="bold"
                    android:onClick="help"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/primary_text"/>

                <EditText
                    android:id="@+id/answer3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:inputType="number"
                    />

            </LinearLayout>

            <!-- Question 4  Radiogroup-->
            <LinearLayout
                android:id="@+id/complete_q4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/question4"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/help4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/help"
                    android:textStyle="bold"
                    android:onClick="help"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/primary_text"/>

                <RadioGroup
                    android:id="@+id/a4_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/answer4a"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer4a" />

                    <RadioButton
                        android:id="@+id/answer4b"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer4b" />

                    <RadioButton
                        android:id="@+id/answer4c"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer4c" />

                    <RadioButton
                        android:id="@+id/answer4d"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/answer4d" />

                </RadioGroup>




            </LinearLayout>

            <!-- Question 5  Text-->
            <LinearLayout
                android:id="@+id/complete_q5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/question5"
                    android:textSize="20sp" />

                <CheckBox
                    android:id="@+id/help5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/help"
                    android:textStyle="bold"
                    android:onClick="help"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/primary_text"/>

                <EditText
                    android:id="@+id/answer5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint"
                    android:inputType="textCapWords"/>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submit_button"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/submit"
        android:textColor="@color/accent"
        android:onClick="validateAnswers"/>

</LinearLayout>
